--- a/money_manager_app/Cargo.toml
+++ b/money_manager_app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "money-manager-domain"
+name = "money_manager_app"
 edition = "2021"
 version.workspace = true
 description.workspace = true
