--- a/money_manager_domain/Cargo.toml
+++ b/money_manager_domain/Cargo.toml
@@ -7,3 +7,5 @@ description.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = { workspace = true }
+anyhow = { workspace = true }
