--- a/money_manager_driver/Cargo.toml
+++ b/money_manager_driver/Cargo.toml
@@ -8,6 +8,7 @@ description.workspace = true
 
 [dependencies]
 money_manager_adapter = { path = "../money_manager_adapter" }
+money_manager_app = { path = "../money_manager_app" }
 
 anyhow = { workspace = true }
 thiserror = { workspace = true }
